# otto-crypt-cpp

./: CMakeLists.txt  README.md
apps/: otto_cli.cpp
include/otto/: otto.hpp
src/: openssl_utils.hpp  otto.cpp
